public/responsive/small.css
body .main {
  padding-left: 4.5%;
  width: 94%;
}

nav.cloud {
  width:20em;
  margin:0 auto;
}

.home .logo {
  background:0;
  background-position:top left;
}

.underline {
  top:2px;
}

/* .branding */
.brand-cloud-logo {
  background-image:url('/images/logo/with-background.png') ;
  background-repeat: no-repeat ;
  background-position:38% 4% ;
  height:516px;
  position:absolute;
  top:0px;
  width:inherit;
}

@media screen and (max-width: 700px){
  .brand-cloud-logo {
    background-position: 35% 4%;
  }  
}

.branding {
  height: 516px;
}

.branding a {
  width: 40%;
}

.branding .pitch {
  padding-left: 18px;
}

.branding .mobiles {
  background-size: contain;
  background-image:url('/images/branding/mobiles-728.png');
  height: 316px;
  margin-left: 3%;
}

.brand-solid-texture {
  height: 398px;
}

.services .tile .leader {
  margin-bottom: 3em; /* hack to make the image longer so the text doesn't wrap */
}

nav.cloud {
  padding-right: 11px;
  height: 20px;
  margin: 13px 0 auto;
  width: 194px; /* this value will need to be changed for more words in the nav */
  margin-top:13px;
  position: absolute;
  right: 1px;
  top: 6px;
}

nav.cloud li {
  margin-right: 9px;
  margin-left: 9px;
}

.home .about article * {
  line-height: 0;
}

.about .tile p {
  font-size: 18px;
  line-height: 1.6;
}

.about .tile {
  width: 45%;
  margin-right: 0px;
  margin-bottom: 21px;
}

.about .last {
  margin-left: 11.5%;
  width: 40%;
}

.strategy .tile {
  width: 30%;
  height: 50%;
  margin-right: 0px;
  margin-top: 19px;
  margin-bottom: 21px;
}

.strategy .tile p {
  font-size: 15px;
  margin-top: 2px;
}

.strategy .tile[position="center"] {
  padding-right: 4.5%;
  padding-left: 3.4%;
}

.community .tile {
  width: 40%;
  margin-right: 0;
  margin-top: 30px;
  padding-top: 0;
}

.community .tile[position="left"] {
  padding-right: 3.5%;
}

.tile .leader {
  float: left;
  margin-right: 6px;
  margin-top: 11px;
}

.community p {
  font-size: 16px;
  margin-top: 5px;
}

footer {
  margin-top: 51px;
}

.bottom-logo {
  background-image: url("/images/services/services_footer_logo.png");
  background-position: 69% 0;
  width: 36%;
  float: left;
}

.bottom .tile {
  width: 35%;
  margin-left: 5%;
  float: left;
}

.bottom .tile li {
  font-size: 12px;
  margin: 2px;
}

footer section.bottom {
  height: 270px;
}

@media screen and (max-width:600px) {
  body .main {
    padding-left: 7%;
    width: 92%;
  }
    
  .brand-cloud-logo {
    background: 0;
  }
  
  .brand-solid-texture {
    height: 347px;
    top: 124px;
  }
  
  .branding .mobiles {
    height: 217px;
  }
  
  .branding {
    height: 467px;
  }
  
  .branding a {
    width: 100%;
  }
  
  .branding .pitch {
    margin-top: 36px;
  }
    
  nav.cloud {
    position: inherit;
    margin: auto;
    margin-top: 7px;
    width: 170px;
    padding-right: 0px;
    padding-left: 3%;
  }
  
  .home .logo {
    background-image: url("/images/logo/with-shadow.png");
    background-position: 54% 0;
    background-repeat: no-repeat;
  }
  
  .about .tile {
    width: 84%;
    margin: 14px 0 6px 0;
  }
  
  .about article.first {
    width: 93%;
  } 
  
  .about article.first p {
    font-size: 19.7px;
    line-height: 1.3;
  }
  .about article.last p {
    margin: 0;
  }
  .about .tile p {
    font-size: 16.7px;
  }
  
  .about .last {
    margin-bottom: 25px;
    padding-left: 0px;
  }
  
  .about article.last br{
    display: none;
  }
  
  .strategy .tile {
    width: 85%;
    margin: 16px 0 16px 0;
  }
  
  .strategy .tile[position="center"]{
    padding: 0;
    margin: 13px 0 20px 0;
  }
  
  .strategy .tile[position="right"]{
    margin-bottom: 33px;
  }
  
  .community p {
    padding-top: 0;
  }
  
  .community .tile {
    margin-top:15px;
  }
  
  .tile .leader {
    width: 65%;
    margin-top: 8px;
    float: none;
  }
  
  .bottom-logo {
    width: 100%;
    background-image: url("/images/logo/only-shadow.png");
    background-position: 53% 60%;
  }
    
  .bottom .tile {
    text-align: center;
    width: 93%;
  }
  
  footer {
    margin-top: 162px;
  }
  
  footer section.bottom {
    height: 300px;
  }
  
  .community .tile[position="left"] {
      padding-right: 6.5%;
  }
}

